# string_search

./: Cargo.toml  README.md
doc/: help.html  search-index.js  settings.html
doc/lib/: all.html  fn.compare.html  fn.rank.html  fn.struct_rank.html  index.html  sidebar-items.js
doc/src/lib/: lib.rs.html
src/: lib.rs
