[package]
name = "magic_string_search"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A simple string search library to rank strings based on their similarity to a query string."
repository = "https://github.com/DeForestt/string_search"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
